--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,5 +1,64 @@
-//font-face($font-name, $file-name, $font-weight: 400, $font-style: 'normal')
+//font-face($font-name, $file-name, $font-weight: 400, $font-style: 'normal', $font-display: 'swap')
 
 
 @include font-face("Roboto", "Roboto-Regular");
 @include font-face("Roboto", "Roboto-Light", 300);
+@include font-face("Roboto", "Roboto-LightItalic", 300, 'italic');
+@include font-face("Roboto", "Roboto-Italic", 400, 'italic');
+@include font-face("icomoon", "icomoon", 400, 'normal', block);
+
+
+// @font-face {
+//     font-family: 'icomoon';
+//     src:  url('fonts/icomoon.eot?2txt0q');
+//     src:  url('fonts/icomoon.eot?2txt0q#iefix') format('embedded-opentype'),
+//       url('fonts/icomoon.ttf?2txt0q') format('truetype'),
+//       url('fonts/icomoon.woff?2txt0q') format('woff'),
+//       url('fonts/icomoon.svg?2txt0q#icomoon') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+//     font-display: block;
+//   }
+//Стили для иконочных шрифтов
+.icon {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-search:before {
+    content: "\e900";
+  }
+  .icon-cart:before {
+    content: "\e901";
+    color: #ff5816;
+  }
+  .icon-rub:before {
+    content: "\e902";
+    color: #445667;
+  }
+  .icon-whatsapp:before {
+    content: "\e903";
+    color: #25d366;
+  }
+  .icon-viber:before {
+    content: "\e904";
+    color: #665cac;
+  }
+  .icon-sync:before {
+    content: "\e905";
+    color: #499c54;
+  }
+  .icon-heart:before {
+    content: "\e906";
+    color: #c6517a;
+  }
