--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,11 +1,11 @@
-@mixin font-face($font-name, $file-name, $font-weight: 400, $font-style: 'normal') {
+@mixin font-face($font-name, $file-name, $font-weight: 400, $font-style: 'normal', $font-display: 'swap') {
     @font-face {
         font-family: $font-name;
         src: url('../fonts/#{$file-name}.woff2') format('woff2'),
              url('../fonts/#{$file-name}.woff') format('woff'),
-             url('../fonts/#{$file-name}.ttf') format('TrueType');
+             url('../fonts/#{$file-name}.ttf') format('truetype');
         font-style: $font-style;
         font-weight: $font-weight;
-        font-display: swap;
+        font-display: $font-display;
     }
 }
