--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -27,6 +27,7 @@
         position: absolute;
         flex-wrap: nowrap;
         flex-direction: column;
+        z-index: 10;
         left: -15px;
         right: -15px;
         background-color: $black-color;
