Finish header-bottom

--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -62,3 +62,9 @@
     content: "\e906";
     color: #c6517a;
   }
+  .icon-arrow-right:before {
+    content: "\e907";
+  }
+  .icon-arrow-left:before {
+    content: "\e908";
+  }
