--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,8 @@
 @import 'components/search';
 @import 'components/profile';
 @import 'components/cart';
+@import '~swiper/swiper-bundle.min.css';
+@import 'components/headerBottom';
 
 
 /*************************
