--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -5,6 +5,7 @@
 @include font-face("Roboto", "Roboto-Light", 300);
 @include font-face("Roboto", "Roboto-LightItalic", 300, 'italic');
 @include font-face("Roboto", "Roboto-Italic", 400, 'italic');
+@include font-face("Roboto", "Roboto-Medium", 500);
 @include font-face("icomoon", "icomoon", 400, 'normal', block);
 
 
@@ -34,7 +35,12 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-  
+  .icon-arrow-left-lg:before {
+    content: "\e907";
+  }
+  .icon-arrow-right-lg:before {
+    content: "\e908";
+  }
   .icon-search:before {
     content: "\e900";
   }
@@ -63,8 +69,47 @@
     color: #c6517a;
   }
   .icon-arrow-right:before {
-    content: "\e907";
+    content: "\e90a";
   }
   .icon-arrow-left:before {
-    content: "\e908";
+    content: "\e909";
   }
+
+  //////////////
+  // .icon-arrow-left-lg:before {
+  //   content: "\e907";
+  // }
+  // .icon-arrow-right-lg:before {
+  //   content: "\e908";
+  // }
+  // .icon-cart:before {
+  //   content: "\e901";
+  //   color: #ff5816;
+  // }
+  // .icon-rub:before {
+  //   content: "\e902";
+  //   color: #445667;
+  // }
+  // .icon-whatsapp:before {
+  //   content: "\e903";
+  //   color: #25d366;
+  // }
+  // .icon-viber:before {
+  //   content: "\e904";
+  //   color: #665cac;
+  // }
+  // .icon-arrow-right:before {
+  //   content: "\e90a";
+  // }
+  // .icon-arrow-left:before {
+  //   content: "\e909";
+  // }
+  // .icon-search:before {
+  //   content: "\e900";
+  // }
+  // .icon-sync:before {
+  //   content: "\e905";
+  // }
+  // .icon-heart:before {
+  //   content: "\e906";
+  // }
