--- a/src/scss/components/_headerBottom.scss
+++ b/src/scss/components/_headerBottom.scss
@@ -1,8 +1,6 @@
-// .header__bottom{
-//     @media (max-width: 769px) {
-//         display: none;
-//     }
-// }
+.header__bottom{
+    padding-bottom: 20px;
+}
 .header__bottom-box{
     // height: 50px;
     background-color: $accent-color;
@@ -40,10 +38,10 @@
 }
 .header-bottom__prev::before{
     font-family: icomoon;
-    content: "\e908";
+    content: "\e909";
 }
 .header-bottom__next::before{
-    content: "\e907";
+    content: "\e90a";
     font-family: icomoon;
 }
 .swiper__link{
@@ -56,9 +54,11 @@
     display: block;
     cursor: pointer;
     text-decoration: none;
+    transition: background-color 0.2s;
 
     &:hover{
         text-decoration: underline;
+        background-color: rgba(#fff, 0.2);
     }
 }
 .header-bottom__swiper-item{
