Finish product sections

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,7 +22,7 @@
 @import 'components/headerBottom';
 @import 'components/news-item';
 @import 'components/hero-slider';
-// @import 'components/section-title;
+@import 'components/product';
 
 
 /*************************
@@ -31,3 +31,4 @@
 @import 'sections/header';
 @import 'sections/header__middle';
 @import 'sections/hero';
+@import 'sections/products-section';
