--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -74,6 +74,9 @@
   .icon-arrow-left:before {
     content: "\e909";
   }
+  .icon-like:before {
+    content: "\e90b";
+  }
 
   //////////////
   // .icon-arrow-left-lg:before {
