Finish stock section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,8 @@
 @import 'components/news-item';
 @import 'components/hero-slider';
 @import 'components/product';
+@import 'components/stock-item';
+@import 'components/timer';
 
 
 /*************************
