--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,3 +34,6 @@
 @import 'sections/header__middle';
 @import 'sections/hero';
 @import 'sections/products-section';
+@import 'sections/footer';
+
+
